<resources>

    <!-- GENERAL -->
    <string name="app_name">Andruid</string>

    <!-- Autre -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Item Menu DM -->
    <string name="menu_home_dm">Home DM</string>
    <string name="menu_codex">Codex</string>

    <string name="menu_script">Script</string>
    <string name="menu_map">Map</string>
    <string name="menu_team_info">Team info</string>
    <string name="menu_fight">Fight</string>
    <string name="menu_music">Music</string>

    <!-- Item Menu PC -->
    <string name="menu_home_pc">Home PC</string>
    <string name="menu_detail_caractere">Detail Caractere</string>
    <string name="menu_journal">Journal</string>
    <string name="menu_inventory">Inventory</string>
    <string name="menu_skill">Skill</string>
    <string name="menu_spell">Spell</string>
    <string name="menu_skills">Skills</string>
    <string name="menu_spells">Spells</string>
    <string name="menu_equipment">Equipment</string>

    <!-- Item Menu DM & PC -->
    <string name="menu_dice">Dice</string>

    <!-- DM -->
    <string name="title_activity_main_dm">MainDmActivity</string>

    <!-- Header Menu DM  -->
    <string name="nav_header_title">Andruid</string>

    <!-- Spell fragment -->
    <string name="spell_fragment_search_placeholder">Enter a name of a spell</string>
    <string name="spell_fragment_description_title">Description:</string>
    <string name="spell_fragment_higher_level_title">Higher level:</string>
    <string name="spell_fragment_add_spell_button">Add to your character</string>
    <string name="spell_fragment_remove_spell_button">Remove to your character</string>
    <string name="level">Level:</string>
    <string name="range">Range:</string>
    <string name="duration">Duration:</string>
    <string name="casting_time">Casting time:</string>
    <string name="concentration">Concentration:</string>
    <string name="school">School:</string>
    <string name="material">Material:</string>
    <string name="higher_level">Higher level:</string>
    <string name="all_spells_switch">All spells</string>

    <!-- Skill fragment-->
    <string name="fragment_spell_list">Spell list</string>
    <string name="fragment_skill_list">Skill list</string>
    <string name="fragment_skill_input_placeholder">Enter a name of a Skill</string>
    <string name="fragment_skill_all_skills">All skills</string>
    <string name="fragment_skill_ability_score">Ability score:</string>
    <string name="fragment_skill_description">Description:</string>
    <string name="skill_fragment_add_skill_button">Add to your character</string>
    <string name="skill_fragment_remove_skill_button">Remove to your character</string>

    <!-- Inventory fragment-->
    <string name="fragment_inventory_all_equipments">All equipments</string>
    <string name="fragment_inventory_enter_a_name">Enter a name</string>
    <string name="fragment_inventory_list">Equipment list</string>
    <string name="category">Category:</string>
    <string name="cost">Cost:</string>
    <string name="weight">Weight:</string>
    <string name="quantity">Quantity:</string>
    <string name="gear_category">Gear category:</string>
    <string name="tool_category">Tool category:</string>
    <string name="vehicle_category">Vehicle category:</string>
    <string name="fragment_equipment_description">Description:</string>
    <string name="equipment_fragment_add_equipment_button">Add to your character</string>
    <string name="equipment_fragment_remove_equipment_button">Remove to your character</string>

    <!-- PC -->
    <string name="title_activity_main_pc">MainPcActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Dice1d4">1D4</string>
    <string name="Dice1d6">1D6</string>
    <string name="Dice1d8">1D8</string>
    <string name="Dice1d10">1D10</string>
    <string name="Dice1d12">1D12</string>
    <string name="Dice1d20">1D20</string>
    <string name="Dice1d100">1D100</string>
    <string name="diceHistoryEraser">Erase</string>
    <string name="character_data">CHARACTER DATA</string>
    <string name="ability_score">Ability Score</string>
    <string name="skills">Skills</string>
    <string name="proficiencies">Proficiencies</string>
    <string name="languages">Languages</string>
    <string name="alignments">Alignments</string>
    <string name="cr_er_un_nouveaux_personnage">Créer un nouveaux personnage</string>
    <string name="character_list">Character list</string>
    <string name="classes">CLASSES</string>
    <string name="subclasses">subClasses</string>
    <string name="features">Features</string>
    <string name="starting_equipment">Starting equipment</string>
    <string name="codex">CODEX</string>
    <string name="equipement">Equipement</string>
    <string name="races">Races</string>
    <string name="spells">Spells</string>
    <string name="monsters">Monsters</string>
    <string name="game_mechanic">Game Mechanic</string>
    <string name="rules">Rules</string>
    <string name="codex_result_list">CODEX RESULT LIST</string>
    <string name="codex_result_list_min">Codex result list</string>
    <string name="equipment">EQUIPMENT</string>
    <string name="equipement_categories">Equipement Categories</string>
    <string name="weapons">Weapons</string>
    <string name="armor">Armor</string>
    <string name="adventuring_gear">Adventuring Gear</string>
    <string name="equipement_packs">Equipement Packs</string>
    <string name="magic_items">Magic Items</string>
    <string name="weapon_properties">Weapon Properties</string>
    <string name="cr_er_une_nouvelle_partie">Créer une nouvelle partie</string>
    <string name="game_list">Game list</string>
    <string name="game_mechanics">GAME MECHANICS</string>
    <string name="conditions">Conditions</string>
    <string name="damage_types">Damage Types</string>
    <string name="magic_schools">Magic Schools</string>
    <string name="search_for_new_item_to_add">Search for new Item To add</string>
    <string name="crire_ici_votre_note">écrire ici votre note</string>
    <string name="dungeons_master">Dungeons Master</string>
    <string name="player_caracter">Player Caracter</string>
    <string name="monsters_maj">MONSTERS</string>
    <string name="notes_list">Notes list</string>
    <string name="cr_er_une_nouvelle_notes">Créer une nouvelle notes</string>
    <string name="races_maj">RACES</string>
    <string name="subraces">subRaces</string>
    <string name="traits">Traits</string>
    <string name="rules_maj">RULES</string>
    <string name="rule_sections">Rule Sections</string>
    <string name="spell_list">Spell list</string>
    <string name="spells_maj">SPELLS</string>


</resources>