<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_dm"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_home_dm" />
        <item
            android:id="@+id/nav_codex"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_codex" />
        <item
            android:id="@+id/nav_dice"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_dice" />
        <item
            android:id="@+id/nav_script"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_script" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_team_info"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_team_info" />
        <item
            android:id="@+id/nav_fight"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_fight" />
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_music" />
    </group>
</menu>