<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_pc"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_home_pc" />
        <item
            android:id="@+id/nav_dice"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_dice" />
        <item
            android:id="@+id/nav_detail_caractere"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_detail_caractere" />
        <item
            android:id="@+id/nav_journal"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_journal" />
        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_inventory" />
        <item
            android:id="@+id/nav_skill"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_skill" />
        <item
            android:id="@+id/nav_spell"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_spell" />
    </group>
</menu>