<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_pc"
    app:startDestination="@+id/nav_home_pc">

    <fragment
        android:id="@+id/nav_home_pc"
        android:name="com.andruidteam.andruid.ui.home_pc.HomePcFragment"
        android:label="@string/menu_home_pc"
        tools:layout="@layout/fragment_home_pc" />

    <fragment
        android:id="@+id/nav_dice"
        android:name="com.andruidteam.andruid.ui.dice.DiceFragment"
        android:label="@string/menu_dice"
        tools:layout="@layout/fragment_dice" />

    <fragment
        android:id="@+id/nav_detail_caractere"
        android:name="com.andruidteam.andruid.ui.detailCaractere.DetailCaractereFragment"
        android:label="@string/menu_detail_caractere"
        tools:layout="@layout/fragment_detail_caractere" />

    <fragment
        android:id="@+id/nav_journal"
        android:name="com.andruidteam.andruid.ui.journal.JournalFragment"
        android:label="@string/menu_journal"
        tools:layout="@layout/fragment_journal" />

    <fragment
        android:id="@+id/nav_inventory"
        android:name="com.andruidteam.andruid.ui.inventory.InventoryFragment"
        android:label="@string/menu_inventory"
        tools:layout="@layout/fragment_inventory" />

    <fragment
        android:id="@+id/nav_skill"
        android:name="com.andruidteam.andruid.ui.skill.SkillFragment"
        android:label="@string/menu_skill"
        tools:layout="@layout/fragment_skill" />

    <fragment
        android:id="@+id/nav_spell"
        android:name="com.andruidteam.andruid.ui.spell.SpellFragment"
        android:label="@string/menu_spell"
        tools:layout="@layout/fragment_spell" />

</navigation>