<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical"
        tools:context=".ui.fragment.codex.equipment.Equipment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:text="@string/equipment"
            android:textSize="50dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical|center_horizontal"/>

        <Button
            android:id="@+id/equipment_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:text="@string/equipement_categories"/>

        <Button
            android:id="@+id/weapons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:text="@string/weapons"/>

        <Button
            android:id="@+id/armor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:text="@string/armor"/>

        <Button
            android:id="@+id/aventuring_gear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:text="@string/adventuring_gear"/>

        <Button
            android:id="@+id/equipement_packs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:text="@string/equipement_packs"/>

        <Button
            android:id="@+id/magic_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:text="@string/magic_items"/>

        <Button
            android:id="@+id/weapon_properties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:text="@string/weapon_properties"/>

    </LinearLayout>

</layout>