<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

        <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical"
            tools:context=".ui.fragment.codex.CodexFragment">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:text="@string/codex"
                android:textSize="60dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical|center_horizontal"/>

            <Button
                android:id="@+id/character_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:text="@string/character_data"/>

            <Button
                android:id="@+id/classes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:text="@string/classes"/>

            <Button
                android:id="@+id/equipment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:text="@string/equipement"/>

            <Button
                android:id="@+id/races"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:text="@string/races"/>

            <Button
                android:id="@+id/spells"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:text="@string/spells"/>

            <Button
                android:id="@+id/monsters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:text="@string/monsters"/>

            <Button
                android:id="@+id/game_mechanics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:text="@string/game_mechanic"/>

            <Button
                android:id="@+id/rules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:text="@string/rules"/>

        </LinearLayout>

</layout>