<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical"
        tools:context=".ui.fragment.codex.races.Races">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:text="@string/races_maj"
            android:textSize="60dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical|center_horizontal"/>

        <Button
            android:id="@+id/races"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:text="@string/races"/>

        <Button
            android:id="@+id/subRaces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:text="@string/subraces"/>

        <Button
            android:id="@+id/traits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:text="@string/traits"/>

    </LinearLayout>

</layout>