<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical"
        tools:context=".ui.fragment.codex.classes.Classes">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:text="@string/classes"
            android:textSize="60dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical|center_horizontal"/>

        <Button
            android:id="@+id/classes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:text="@string/classes"/>

        <Button
            android:id="@+id/subclasses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:text="@string/subclasses"/>

        <Button
            android:id="@+id/features"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:text="@string/features"/>

        <Button
            android:id="@+id/starting_equipement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:text="@string/starting_equipment"/>

    </LinearLayout>

</layout>