<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable name="character"
            type="com.andruidteam.andruid.db.entity.CharacterEntity"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.dice.DiceFragment">

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">

                <Button android:id="@+id/dice1D4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:layout_marginTop="80dp"
                    android:layout_gravity="center_horizontal"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/Dice1d4" />


                <Button android:id="@+id/dice1D6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:layout_marginTop="25dp"
                    android:layout_gravity="center_horizontal"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/Dice1d6" />

                <Button android:id="@+id/dice1D8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:layout_marginTop="25dp"
                    android:layout_gravity="center_horizontal"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/Dice1d8" />

                <Button android:id="@+id/dice1D10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:layout_marginTop="25dp"
                    android:layout_gravity="center_horizontal"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/Dice1d10" />

                <Button android:id="@+id/dice1D12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:layout_marginTop="25dp"
                    android:layout_gravity="center_horizontal"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/Dice1d12" />

                <Button android:id="@+id/dice1D20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:layout_marginTop="25dp"
                    android:layout_gravity="center_horizontal"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/Dice1d20" />

                <Button android:id="@+id/dice1D100"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:layout_marginTop="25dp"
                    android:layout_gravity="center_horizontal"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/Dice1d100" />

                <Button android:id="@+id/diceHistoryEraser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:layout_marginTop="30dp"
                    android:layout_gravity="center_horizontal"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/diceHistoryEraser" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/diceResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:text=""
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/historic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:text=""
                    android:textSize="40sp"
                    android:scrollbars = "vertical"/>


            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>