<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/switchAllSkills"
                android:layout_height="21dp"
                android:layout_weight="1"
                android:width="120dp"
                android:text="@string/fragment_skill_all_skills"
                tools:ignore="UseSwitchCompatOrMaterialXml"
                android:layout_width="0dp" />

            <EditText
                android:id="@+id/searchName"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_skill_input_placeholder"
                android:inputType="text"
                android:layout_marginStart="10dp"
                android:singleLine="true"
                android:imeOptions="actionDone">
            </EditText>


        </LinearLayout>


        <ListView
            android:id="@+id/skills_list"
            android:contentDescription="@string/fragment_skill_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="LinearLayoutManager"
            />

    </LinearLayout>

</layout>